--- a/PlayerApp/packages.config
+++ b/PlayerApp/packages.config
@@ -4,4 +4,5 @@
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
+  <package id="NAudio" version="1.8.4" targetFramework="net461" />
 </packages>
