--- a/PlayerApp/packages.config
+++ b/PlayerApp/packages.config
@@ -5,5 +5,6 @@
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
 </packages>
