--- a/PlayerApp/packages.config
+++ b/PlayerApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.9" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
@@ -7,4 +8,5 @@
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
+  <package id="YoutubeExplode" version="4.1.0-alpha" targetFramework="net45" />
 </packages>
