--- a/PlayerApp/packages.config
+++ b/PlayerApp/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.9.9" targetFramework="net45" />
+  <package id="CliWrap" version="1.7.3" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net45" />
+  <package id="MvvmDialogs" version="5.1.0" targetFramework="net45" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
